--- a/client/src/app/features/contribution/components/amount-selection/amount-selection.component.html
+++ b/client/src/app/features/contribution/components/amount-selection/amount-selection.component.html
@@ -2,7 +2,7 @@
   (click)="onSelectAmount()"
   class="rounded-full px-4 py-2 border text-center min-w-[100px] transition-all duration-200 cursor-pointer text-sm sm:text-base border-gray-300 hover:border-blue-500 font-medium mb-2"
   [ngClass]="{
-    'bg-blue-500 text-white shadow-[0_0_10px_2px_#3b82f6]': selected,
+    'bg-teal-500 text-white': selected,
     'text-gray-700': !selected
   }"
 >
