added guards in payment success page, some minor UI changes

--- a/client/src/app/features/contribution/components/amount-selection/amount-selection.component.html
+++ b/client/src/app/features/contribution/components/amount-selection/amount-selection.component.html
@@ -7,7 +7,7 @@
   }"
 >
   <ng-container *ngIf="amount !== null"
-    ><span>₹{{ amount }}</span></ng-container
+    ><span>&#8377;{{ amount }}</span></ng-container
   >
   <ng-container *ngIf="amount === null"
     ><span>Other Amount</span>
