--- a/client/src/app/features/contribution/contribution.component.html
+++ b/client/src/app/features/contribution/contribution.component.html
@@ -1,8 +1,16 @@
-<div class="text-center border-b border-gray-200 py-4 relative">
+<div
+  class="sticky top-0 flex justify-between items-center px-4 text-center border-b border-gray-200 bg-zinc-100 py-4"
+>
+  <i class="left-4 top-5 text-cyan-700 text-lg fa fa-arrow-left"></i>
   <h2 class="text-xl font-semibold text-teal-500">
     Choose a contribution amount
   </h2>
-  <div class="absolute right-4 top-4 text-cyan-700 text-lg">₹</div>
+
+  <div>
+    <select name="currency" id="currency-dropdown">
+      <option value="INR">&#8377; INR</option>
+    </select>
+  </div>
 </div>
 
 <div class="flex flex-col items-center my-6 px-4">
@@ -43,12 +51,13 @@
   <div
     class="bg-teal-100 border border-blue-100 rounded-md p-4 w-full max-w-lg text-sm text-gray-700"
   >
-    <p class="mb-2">
+    <p class="mb-2 gap-1">
       Ketto is charging 0% platform fee* for this fundraiser, relying solely on
-      the generosity of contributors like you.
+      the generosity of contributors like you. &#9432;
     </p>
+
     <div class="flex items-center gap-2">
-      <span>Support us by adding a tip of:</span>
+      <span class="font-semibold">Support us by adding a tip of:</span>
       <select
         class="shadow-lg"
         id="tipDropDown"
@@ -62,7 +71,7 @@
       </select>
     </div>
     <p class="mt-2 text-right font-semibold">
-      Total Amount: ₹{{ totalAmount }}
+      Total Amount: &#8377;{{ totalAmount }}
     </p>
   </div>
 
@@ -71,7 +80,6 @@
     (ngSubmit)="formSubmitted()"
     class="w-full max-w-lg mx-auto space-y-6 mt-8"
   >
-    <!-- Name Field -->
     <div class="relative">
       <input
         type="text"
@@ -97,7 +105,6 @@
       </p>
     </div>
 
-    <!-- Anonymous Checkbox -->
     <div class="flex items-center gap-2">
       <input type="checkbox" formControlName="anonymous" id="anonymous" />
       <label for="anonymous" class="text-sm text-gray-600">
@@ -105,7 +112,6 @@
       </label>
     </div>
 
-    <!-- Email Field -->
     <div class="relative">
       <input
         type="email"
@@ -136,7 +142,6 @@
       </p>
     </div>
 
-    <!-- Phone Field with Country Code -->
     <div class="flex items-center gap-2">
       <select
         class="h-12 border-b-2 border-gray-300 bg-transparent text-sm text-gray-700 focus:outline-none focus:border-blue-600 pr-2 pl-1 w-[80px]"
@@ -170,7 +175,6 @@
       </div>
     </div>
 
-    <!-- Address Field -->
     <div class="relative">
       <input
         type="text"
@@ -186,7 +190,7 @@
       <label
         for="address"
         class="absolute left-0 -top-3.5 text-gray-600 text-sm transition-all peer-placeholder-shown:text-base peer-placeholder-shown:text-gray-400 peer-placeholder-shown:top-3 peer-focus:-top-3.5 peer-focus:text-sm peer-focus:text-gray-600"
-        >Address <span class="text-red-500">*</span></label
+        >Address <span class="text-gray-500">*</span></label
       >
       <div class="absolute right-2 top-3.5 text-gray-400 pointer-events-none">
         <i class="fas fa-building"></i>
@@ -202,7 +206,9 @@
         [disabled]="userInfoForm.invalid || totalAmount <= 0 || requestSent"
         class="w-full bg-teal-600 hover:bg-teal-700 text-white font-semibold py-3 px-6 rounded-md shadow transition duration-200 flex items-center justify-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed"
       >
-        <span *ngIf="!requestSent">Proceed To Pay ₹{{ totalAmount }}</span>
+        <span *ngIf="!requestSent"
+          >Proceed To Pay &#8377;{{ totalAmount }}</span
+        >
         <span *ngIf="requestSent" class="flex items-center gap-2">
           <svg
             class="animate-spin h-5 w-5 text-white"
@@ -228,5 +234,10 @@
         </span>
       </button>
     </div>
+    <span class="text-gray-500"
+      >By Continuing, You agree to our
+      <a class="text-teal-500 cursor-pointer">Terms of Service</a> and
+      <a class="text-teal-500 cursor-pointer">Privacy Policy</a></span
+    >
   </form>
 </div>
