--- a/client/src/app/pages/payment-success/payment-success.component.html
+++ b/client/src/app/pages/payment-success/payment-success.component.html
@@ -2,7 +2,7 @@
   <h2 class="text-2xl font-bold text-gray-800 mb-2">Thank you! {{ name }}</h2>
   <p class="text-gray-600 mb-4">
     Your contribution of
-    <span class="font-semibold text-gray-800">₹{{ amount }}</span> was
+    <span class="font-semibold text-gray-800">&#8377;{{ amount }}</span> was
     successful.
   </p>
 
@@ -17,7 +17,7 @@
 
   <a
     routerLink="/"
-    class="mt-6 cursor-default inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-md transition"
+    class="mt-6 cursor-default inline-block bg-teal-600 hover:bg-teal-700 text-white px-6 py-2 rounded-md transition"
   >
     Go Back Home
   </a>
